--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ env:
     - DJANGO=1.8.4
 install:
     - pip install django==$DJANGO 
+    - pip install codecov
 script:
     - python manage.py test
+after_success:
+    - codecov
 
